--- a/app/src/main/res/layout/noticia_item.xml
+++ b/app/src/main/res/layout/noticia_item.xml
@@ -5,16 +5,18 @@
 
     <ImageView
         android:id="@+id/imgNoticia"
-        android:layout_width="45dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:src="@drawable/rss"
         android:layout_gravity="center"
+        android:paddingRight="7dp"
        />
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:paddingRight="10dp">
 
         <TextView
             android:id="@+id/tvFecha"
